--- a/app/src/main/res/values-fr/help.xml
+++ b/app/src/main/res/values-fr/help.xml
@@ -322,7 +322,7 @@
         <p>Pour utiliser Tor avec Monerujo, vous aurez besoin d'\avoir installé Orbot sur votre téléphone. Après
         avoir installé Orbot, assurez-vous de l\activer en cliquant sur l\'icône réseau sur l\'écran de la liste des
         porte-monnaie.</p>
-        <p>Si vous avez des problèmes de connexion avec Tor, essayez d'obtenir une nouvelle identité dans l'application
+        <p>Si vous avez des problèmes de connexion avec Tor, essayez d\'obtenir une nouvelle identité dans l\'application
         Orbot (l\'icône en haut à droite).</p>
     ]]></string>
 
