--- a/app/src/main/res/values-tr/about.xml
+++ b/app/src/main/res/values-tr/about.xml
@@ -31,7 +31,7 @@
         </p>
         <p>Diğer kişisel veriler uygulama tarafından toplanmaz.</p>
         <p>Şayet dönüşüm işlevini (seçime dayalı) kullanırsanız, Monerujo dönüşüm oranını
-        coinmarketcap.com herkese açık API'sı vasıtasıyla elde eder.
+        coinmarketcap.com herkese açık API\'sı vasıtasıyla elde eder.
         Taleplerinizdeki verilerin nasıl toplandığına dair ayrıntılar için gizlilik
         politikalarını https://coinmarketcap.com/privacy sayfasında bulabilirsiniz.</p>
         <p>Eğer uygulamayı BTC adreslerine ödeme yapmak için kullanırsanız, SideShift.ai
