--- a/app/src/main/res/values-tr/help.xml
+++ b/app/src/main/res/values-tr/help.xml
@@ -89,7 +89,7 @@
         cümlesi (belki de eskisiyle aynı) girdikten sonra uygulama sizin için bir CrAzYpass oluşturacak
         ve onunla cüzdan dosyalarınızın güvenliğini sağlayacaktır. Onu bir köşeye yazın!
         <h3>CrAzYpass cüzdanları</h3>
-        Eğer Monerujo'yu yeniden kurmanız gerekirse (mesela telefonunuzu sıfırladıktan sonra veya yeni bir
+        Eğer Monerujo\'yu yeniden kurmanız gerekirse (mesela telefonunuzu sıfırladıktan sonra veya yeni bir
         telefona geçiş yapığınızda) veya cüzdan dosyalarınızı başka bir cihaz veya bilgisayarda kullanmak
         istiyorsanız, cüzdanınıza tekrar erişmek için bu Geri Getirme Parolasını kullanmanız gerekir.<br/>
         Menüden \"Parolayı Değiştir\" unsurunu seçerek yeni bir parola cümlesi seçebilirsiniz. Bunun yeni bir
